@@ -27,7 +27,8 @@
         "rospdf/pdf-php": "^0.12.1",
         "components/jqueryui": "^1",
         "xdan/datetimepicker": "^2",
-        "datatables/datatables": "^1.10"
+        "datatables/datatables": "^1.10",
+        "setasign/fpdi-tcpdf": "^1.6"
     },
     "require_dev": {
         "phpunit/phpunit": "5.1.*"
